--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -61,11 +61,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="center">
-                    <a href="{{ path('about_index') }}">
-                        <img src="{{ asset('images/local/icons/menu-icon.svg') }}" class="plus-icon">
-                    </a>
-                </div>
+
+                {% if is_granted('ROLE_ADMIN') %}
+
+                    <div class="center">
+                        <a href="{{ path('about_index') }}">
+                            <img src="{{ asset('images/local/icons/menu-icon.svg') }}" class="plus-icon">
+                        </a>
+                    </div>
+
+                {% endif %}
 
             </div>
 
