--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -11,13 +11,7 @@
     <footer class="page-footer backcontent">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text"></h5>
-                    <p class="grey-text text-lighten-4">
-                        {{ render(controller('AppBundle:About:show')) }}
-                    </p>
-                </div>
-                <div class="col l4 offset-l2 s12">
+                <div class="col s12 center">
                     <h5 class="white-text">Partenaires</h5>
                     {#{{ render(controller('AppBundle:')) }}#}
                     <ul>
