--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -13,16 +13,23 @@
             <div class="row">
                 <div class="col s12 center">
                     <h5 class="white-text">Partenaires</h5>
-                    {#{{ render(controller('AppBundle:')) }}#}
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                        {#{{ render(controller('AppBundle:Partner:show')) }}#}
+
+                        {% if is_granted('ROLE_ADMIN') %}
+
+                            <li class="right">
+                                <a href="{{ path('partner_index') }}">
+                                    <img src="{{ asset('images/local/icons/menu-icon.svg') }}" class="plus-icon-index">
+                                </a>
+                            </li>
+
+                        {% endif %}
                         <li>
                             <a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">Contact</a>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </div>
