--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -8,23 +8,10 @@
                     <div class="center-align">
                         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                             <h3>{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}</h3>
-                            {#<a href="{{ path('fos_user_security_logout') }}">#}
-                                {#{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}#}
-                            {#</a>#}
                         {% else %}
-                            {#<a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>#}
+                            <p>non connecté</p>
                         {% endif %}
                     </div>
-
-                    {#{% if app.request.hasPreviousSession %}#}
-                        {#{% for type, messages in app.session.flashbag.all() %}#}
-                            {#{% for message in messages %}#}
-                                {#<div class="flash-{{ type }}">#}
-                                    {#{{ message }}#}
-                                {#</div>#}
-                            {#{% endfor %}#}
-                        {#{% endfor %}#}
-                    {#{% endif %}#}
 
                     <div>
                         {% block fos_user_content %}
