--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,8 +4,10 @@
         <meta charset="UTF-8" />
         <title>
             {% block title %}
-                Nathalie Sian Création
-            {% endblock %}</title>
+            {% endblock %}
+            - Nathalie Sian Création - Plasticienne
+        </title>
+        <meta name="description" content="Découvrez les collections de la création d'objets artisanaux décoratifs fait mains. Pour le jardin, la maison ou des bijoux de hautes qualités">
         <link rel="icon" type="image/x-icon" href="{{ asset('') }}" />
         <!-- CSS -->
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css"> -->
