--- a/app/Resources/views/subgallery/list.html.twig
+++ b/app/Resources/views/subgallery/list.html.twig
@@ -1,5 +1,11 @@
 {% extends 'layout.html.twig' %}
 
+{% block title %}
+    {% for gallery in galleries %}
+        {{ gallery.name }}
+    {% endfor %}
+{% endblock %}
+
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('css/effects/style_common.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ asset('css/effects/style.css') }}" />
